Bug 812391 - Patch 1: Support audio stream of bt_sco, r=echou