dom/bluetooth/BluetoothHfpManager.h
@@ -36,6 +36,7 @@ public:
                           const char* aNumber, bool aIsActive);
   void SetupCIND(int aCallIndex, int aCallState, bool aInitial);
   bool Listen();
+  void SetVolume(int aVolume);
 
 private:
   friend class BluetoothHfpManagerObserver;
